Avoid layout shift from disappearing scroll bar

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,6 @@
 body {
     background-image: url(assets/background.png);
+    overflow-y: scroll;
 }
 
 main {
